Production/PMKUSUM/templates/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: pmkusum-service
  namespace: pmkusum
spec:
  selector:
    app: pmkusum-app
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
      # nodePort: 31000
  type: ClusterIP  #NodePort
